# ethereum-address-generator

./: .gitignore  LICENSE  README.md  package.json
.github/workflows/: build.yml
src/: todo-list.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
